update fonts shadow math page choir page fix alignment of links section.

--- a/forest-area-project/math/css/main.css
+++ b/forest-area-project/math/css/main.css
@@ -54,6 +54,7 @@ h3 {
     color: black;
     padding-left: 35px;
     padding-top: 65px;
+    text-shadow: 3px 3px 4px grey;
     text-transform: capitalize;
 }
 
